refactor: 清理构建期 43 条弃用警告
CI 的「构建」步从 :ext-runtime:android-compat:compileKotlin 起刷 43 条警告，
分四组处理：

- 补 10 处缺失的 @Deprecated 注解：AOSP 源码只写了 Javadoc @deprecated 标签、
  没加注解，javac 报 [dep-ann]；连带 FakePackageManager 的覆盖方也要补
- ScrollableResultSet 覆盖 java.sql.ResultSet 已弃用方法的 4 个成员补 @Deprecated
- 4 处补 ExperimentalSerializationApi opt-in；3 处删多余的 !!（okhttp 4.0 起
  Response.body 就是非空 ResponseBody）
- Reflect 用 Int::class.javaObjectType 取代 java.lang.Integer::class.java ——
  不能按编译器提示写成 Int::class.java，那是 primitive int 的 Class，会让
  primitiveOf() 退化成恒等映射
- SourceDriver 的 as? List<Any> 改星投影，去掉 7 处 unchecked cast

终结器迁 java.lang.ref.Cleaner（JDK 18 起 Object.finalize() 标记待删除）：
- SQLiteDatabase：动作持有 CloseGuard 与 JDBC Connection，由 openInner() 在连接
  就绪后注册（构造时还没有），dispose() 时撤销
- MessageQueue：mPtr 由 long 改 AtomicLong，6 处裸读写改 .get()，dispose() 用
  getAndSet(0) 保证句柄只销毁一次
- SQLiteCursor：动作持有 mQuery，兜底释放 JDBC PreparedStatement
- AbstractCursor：直接删除，不换 Cleaner —— 本仓 setNotificationUri() 抛
  NotImplementedError，mSelfObserver / mContentResolver 恒为 null，原终结器什么
  都不释放；且 Cleaner 动作不能持有宿主、无法调用实例方法 close()

改动已记入 ext-runtime/android-compat/README.md 的「相对上游的改动」列表，
同步上游时按该列表重新裁剪。